Add bookmark information on listing details serializer
