# mobile_api/swagger.yaml
@@ -1042,6 +1042,10 @@ definitions:
             title: Website
             type: string
             format: uri
+      is_bookmarked:
+        title: Is bookmarked
+        type: boolean
+        readOnly: true
   LostListing:
     required:
     - type
@@ -1196,6 +1200,10 @@ definitions:
             title: Website
             type: string
             format: uri
+      is_bookmarked:
+        title: Is bookmarked
+        type: boolean
+        readOnly: true
   UserGetMe:
     required:
     - phone
